--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -214,7 +214,7 @@ justify-content: center;
 .form-content {
   height: 90%;
   width: 90%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -222,10 +222,12 @@ justify-content: center;
   border-radius: 20px;
   opacity: 0;
   transition: opacity 1s ease-in-out; 
+ 
 }
 
 .form-content.active {
   opacity: 1;
+  
 }
 
 
