--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -138,7 +138,7 @@ a {
 /* Submission */
 
 .submission-section {
-height: 50vh;
+height: 40vh;
 display: flex;
 align-items: center;
 justify-content: center;
@@ -157,7 +157,7 @@ justify-content: center;
   font-weight: 800;
   font-size: 1.5rem;
   width: 600px;
-  height: 150px;
+  height: 120px;
 text-align: center;
 display: flex;
 align-items: center;
@@ -267,8 +267,8 @@ display: flex;
 align-items: center;
 justify-content: center;
 flex-direction: column;
-gap: 20px;
-padding-top: 60px;
+gap: 10px;
+padding-top: 90px;
 }
 
 .project-name-input {
@@ -287,6 +287,28 @@ padding-top: 60px;
   font-family: 'Nunito', sans-serif;
 }
 
+.project-material {
+  font-size: 1.5rem;
+  padding-right: 15px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.project-material-input {
+  height: 30px;
+  width: 200px;
+}
+
+.project-jobs {
+  font-size: 1.5rem;
+  padding-right: 15px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.project-jobs-input {
+  height: 30px;
+  width: 200px;
+}
+
 .project-name {
   font-size: 1.5rem;
   padding-right: 15px;
@@ -299,12 +321,15 @@ padding-top: 60px;
   height: 30px;
   border-radius: 30px;
   position: relative;
-  bottom: 40px;
+  bottom: 80px;
+  background-color: rgb(53, 53, 53);
+  color: white;
 }
 
 .form-submit-btn:hover {
   background-color: rgb(118, 245, 175);
   border: black solid 2px;
+  color: black;
 }
 
 
@@ -399,7 +424,7 @@ padding-top: 40px;
 
 
 .efOXCC svg {
-
+color: green;
 
 }
 
