field form fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -201,7 +201,7 @@ justify-content: center;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  
+  gap: 5px;
 }
 
 
@@ -286,13 +286,13 @@ padding-top: 90px;
 }
 
 .project-address {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding-right: 15px;
   font-family: 'Nunito', sans-serif;
 }
 
 .project-material {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding-right: 15px;
   font-family: 'Nunito', sans-serif;
 }
@@ -304,7 +304,7 @@ padding-top: 90px;
 }
 
 .project-jobs {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding-right: 15px;
   font-family: 'Nunito', sans-serif;
 }
@@ -317,7 +317,7 @@ padding-top: 90px;
 }
 
 .project-name {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding-right: 15px;
   font-family: 'Nunito', sans-serif;
 }
@@ -356,9 +356,7 @@ padding-top: 90px;
 
 
 
-.cGndr {
-padding-top: 40px;
-}
+
 
 .gBDkEr {
   background-color:rgb(118, 245, 175) !important;
@@ -444,6 +442,7 @@ padding-top: 40px;
   padding: 20px;
   width: 100%;
   text-align: center;
+
 }
 
 .add-btn {
@@ -473,4 +472,8 @@ padding-top: 40px;
 .delete-btn:hover {
   background-color: black;
   color: white;
+}
+
+.sc-lcIPJg .cGndr .sc-fjvvzt .lcvIHF {
+  padding: 0 !important;
 }
